src/main/java/com/example/bankcards/exception/error/UserAlreadyExistsByEmailException.java
package com.example.bankcards.exception.error;

public class UserAlreadyExistsByEmailException extends RuntimeException {
    public UserAlreadyExistsByEmailException(String message) {
        super(message);
    }
}
